@@ -541,6 +541,12 @@ function views_ui_preview_form($form, &$form_state) {
     '#id' => 'preview-submit',
   );
 
+  $form['live_preview'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Automatic live preview'),
+    '#default_value' => !variable_get('views_ui_disable_live_preview', 0),
+  );
+
   $form['#action'] = url("admin/structure/views/nojs/preview/$view->name");
   return $form;
 }
@@ -2871,6 +2877,13 @@ function views_ui_admin_tools() {
     '#title' => t('Show query above live preview'),
     '#description' => t("The live preview feature will show you the output of the view you're creating, as well as the view. Check here to show the query and other information above the view; leave this unchecked to show that information below the view."),
     '#default_value' => variable_get('views_ui_query_on_top', FALSE),
+  );
+
+  $form['views_ui_disable_live_preview'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Disable automatic live preview'),
+    '#description' => t("Don't automatically update the preview. This can speed up the editing of views a bit.'"),
+    '#default_value' => variable_get('views_ui_disable_live_preview', 0),
   );
 
   $form['views_show_additional_queries'] = array(
